# Metodos-Numericos-I

./: .gitignore  CMakeLists.txt  NewtonRhapson  README.md  executavel_projeto.sh
include/: CMakeLists.txt  Cramer.hpp  Derivacao.hpp  Gauss.hpp  GaussJordan.hpp  Metodo.hpp  Metodos.hpp  NewtonRaphson.hpp  NewtonRaphsonComDerivadaNumerica.hpp  NewtonRaphsonFL.hpp  NewtonRhapson.hpp  Painel.hpp  Passos.hpp  Pendulo.hpp  Polinomio.hpp  QuadroComparativo.hpp  Tabela.hpp  Utils.hpp  Vizualizador.hpp
include/exceptions/: CMakeLists.txt  PivoZeroException.hpp
src/: CMakeLists.txt  main.cpp  painel.cpp
src/exceptions/: CMakeLists.txt  PivoZeroException.cpp
src/ext/: CMakeLists.txt
src/funcoes/: CMakeLists.txt  Derivacao.cpp  Pendulo.cpp  Polinomio.cpp
src/metodos/: CMakeLists.txt  Cramer.cpp  Gauss.cpp  GaussJordan.cpp  Metodo.cpp  NewtonRaphson.cpp  NewtonRaphsonComDerivadaNumerica.cpp  NewtonRaphsonFL.cpp
src/outputs/: CMakeLists.txt  Painel.cpp  Passos.cpp  QuadroComparativo.cpp  Tabela.cpp  Utils.cpp  Visualizador.cpp  Vizualizador.cpp
trabalho-legado/: CMakeLists.txt
trabalho-legado/include/: CMakeLists.txt  NewtonRaphson.hpp  NewtonRaphsonComDerivadaNumerica.hpp  Tabela.hpp
trabalho-legado/src/funcoes/: CMakeLists.txt
trabalho-legado/src/outputs/: Passos.cpp  Tabela.cpp
